# socr

./: README.md  TICKETS.md  pyproject.toml
docs/: ARCHITECTURE.md
examples/comparison/shrimali_2025/: README.md
examples/comparison/shrimali_2025/01_standard_gemini/2025__shrimali_ahmad__when_central_banks_are_all_ears__FRL/: 2025__shrimali_ahmad__when_central_banks_are_all_ears__FRL.md
examples/comparison/shrimali_2025/02_unified_gemini/2025__shrimali_ahmad__when_central_banks_are_all_ears__FRL/: 2025__shrimali_ahmad__when_central_banks_are_all_ears__FRL.md
examples/comparison/shrimali_2025/03_unified_gemini_api/2025__shrimali_ahmad__when_central_banks_are_all_ears__FRL/: 2025__shrimali_ahmad__when_central_banks_are_all_ears__FRL.md
examples/comparison/shrimali_2025/04_multi_engine/2025__shrimali_ahmad__when_central_banks_are_all_ears__FRL/: 2025__shrimali_ahmad__when_central_banks_are_all_ears__FRL.md
examples/comparison/shrimali_2025/04_multi_engine_gemini/2025__shrimali_ahmad__when_central_banks_are_all_ears__FRL/: 2025__shrimali_ahmad__when_central_banks_are_all_ears__FRL.md
examples/comparison/shrimali_2025/05_multi_gemini_mistral/2025__shrimali_ahmad__when_central_banks_are_all_ears__FRL/: 2025__shrimali_ahmad__when_central_banks_are_all_ears__FRL.md
src/smart_ocr/: __init__.py  cli.py
src/smart_ocr/core/: __init__.py  config.py  document.py  result.py
src/smart_ocr/engines/: __init__.py  deepseek_vllm.py  vllm.py  vllm_manager.py
src/smart_ocr/figures/: __init__.py
src/smart_ocr/pipeline/: __init__.py  hpc_pipeline.py  hpc_sequential_pipeline.py  processor.py  reconciler.py  router.py
src/smart_ocr/ui/: theme.py
src/socr/: __init__.py  cli.py
src/socr/audit/: __init__.py  heuristics.py  llm_audit.py  scorer.py
src/socr/benchmark/: __init__.py  calibrate.py  dataset.py  ground_truth.py  rasterize.py  runner.py  scorer.py
src/socr/core/: __init__.py  born_digital.py  chunker.py  config.py  document.py  metadata.py  normalizer.py  result.py  state.py
src/socr/engines/: __init__.py  base.py  deepseek.py  deepseek_vllm.py  gemini.py  gemini_api.py  marker.py  mistral.py  nougat.py  registry.py  vllm.py  vllm_manager.py
src/socr/figures/: __init__.py  extractor.py
src/socr/pipeline/: __init__.py  consensus.py  hpc_pipeline.py  orchestrator.py  processor.py  reconciler.py  repair.py  router.py
src/socr/ui/: __init__.py  console.py  panels.py  progress.py  theme.py
tests/: test_audit_heuristics.py  test_benchmark.py  test_benchmark_runner.py  test_born_digital.py  test_chunker.py  test_consensus.py  test_document_state.py  test_figure_pass.py  test_gemini_api.py  test_normalizer.py  test_orchestrator.py  test_pipeline_routing.py  test_repair_router.py
